# MetaDatabase

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHECKSUMS.sha256  CODEX_MASTER_TASK.md  CURRENT_PHASE.md  DELIVERY_INDEX.md  DEVELOPMENT_STATUS.md  DIRECTORY_TREE.txt  FUNCTION_CATALOG.md  GOVERNANCE_INDEX.md  HANDOFF.md  LICENSE  MODEL_MANAGEMENT.md  Makefile  PURSUING_GOAL.md  README.md  RISK_AND_ACCEPTANCE.md  RUN_CODEX.md  SOURCES.md  US_Corporate_Power_Map_System_Model_Parameter_Architecture_v4.2.md  VALIDATION_REPORT.md  WHERE_IS_PROJECT_DATA.md  docker-compose.yml  manifest.txt  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  功能清单  功能清单.md  开发记录  开发记录.md  模型参数文件  模型参数文件.md
ABD/: .gitattributes  PURSUE_GOAL_PROMPT.txt  README.md  access_policy.md  accessibility_report.json  advice_card_fixtures.json  advice_card_schema.json  assumption_register.json  business_flows.json  cadence_tests.json  capacity_budget.json  counterevidence.json  coverage_dashboard.json  coverage_manifest.schema.json  customer_faq.md  customer_outcomes.json  customer_press_release.md  degraded_page.html  economics.json  feature_flags.json  forbidden_ui_terms.json  glossary_zh.json  kill_criteria.json  license_inventory.json  load_baseline.json  market_ontology.json  metrics.json  model_claims.json  next_action_matrix.json  provider_contracts.json  provider_facts_snapshot.json  pyproject.toml  rate_budget.json  reason_codes_zh.json  regulatory_matrix.json  release_slots.json  requirements.json  research_evidence_matrix.json  research_gaps.json  research_reuse_matrix.json  (+9 more)
ABD/abd_acceptance/: __init__.py  __main__.py  advice_card.py  authorization.py  budget.py  canonical_facts.py  capacity_governance.py  cloudflare_edge.py  coverage_observability.py  customer_faq.py  customer_press_release.py  delivery.py  external_consent.py  infrastructure_iac.py  market_ontology.py  metrics_economics.py  model_risk_research.py  official_platform_research.py  open_source_reuse.py  reason_next_action.py  release_control.py  requirements_scope.py  research_gap_audit.py  source_capabilities.py  source_scheduler.py  stage1_delivery.py  stage1_review.py  stage2_delivery.py  stage2_review.py  stage3_delivery.py  stage3_review.py  stage4_delivery.py  stage4_review.py  stage5_review.py  stage_review.py  terminology_governance.py  usability_accessibility.py
ABD/infra/: cloudflared.yml  compose.yml  config.schema.json  rebuild.sh
ABD/skill/: Product-Design-Taskpack-Skill.md
ABD/tests/: __init__.py
ABD/文档/: 00_我在哪.md  01_产品需求.md  02_系统架构.md  03_口径字典.md  04_操作流程.md  05_执行与验收.md  06_运维手册.md
Alpha/: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml  功能清单  功能清单.md  开发记录  开发记录.md  模型参数文件  模型参数文件.md
Alpha/configs/: agent_loop.yaml  fees.yaml  monthly_review.yaml  notify.yaml  portfolio.yaml  strategy_promotion.yaml  trading_governor_policy.yaml
Alpha/data/: sample_prices.csv
Alpha/deploy/: STAGE3_ACTIVATION.md  bootstrap_primary.sh  cloud-init.yaml  env.template  finish_deploy.sh  load_env_interactive.sh  opend_first_login.sh  provision_oracle.sh  setup.sh  setup_tunnel.sh  start_soak_host.sh
Alpha/docs/: decision_log.md  local_app_entry.md  requirements_alignment.md  structure_migration_map.md
Alpha/scripts/: activate_micro_live.py  build_djia_membership.py  daily_rejudge.py  export_paper_run.py  notify_unit_failure.py  prepare_live_authorization.py  probe_real_machine.py  replay_fixed_rule_ledger.py  replay_frequency_axis.py  replay_persona_candidates.py  run_backtest.py  run_research_blend.py  run_research_cal.py  run_research_cal2.py  run_research_db.py  run_research_drot.py  run_research_fac.py  run_research_lev.py  run_research_pit.py  run_research_r2.py  run_research_sm.py  run_research_sweep.py  run_research_trend.py  run_research_uni.py  run_research_wide.py  run_soak.py  select_simulate_trd_id.py  snapshot_equity.py  start_alpha_dashboard.sh  stop_alpha_dashboard.sh
Alpha/tests/: test_activate_micro_live.py  test_agent_runtime.py  test_approval_queue.py  test_backtest_fixture.py  test_backtest_pipeline.py  test_calendar_effects.py  test_control_page.py  test_daily_rejudge.py  test_dashboard_state.py  test_defensive_rotation.py  test_deploy_artifacts.py  test_domain_state_machine.py  test_execution_gateway.py  test_execution_lease.py  test_export_paper_run.py  test_gem_plus_production.py  test_idempotency.py  test_indicators.py  test_ledger_metrics.py  test_lifecycle_scripts.py  test_live_broker_fail_closed.py  test_live_cycle.py  test_moomoo_adapter_contract.py  test_moomoo_real_bridge.py  test_notify_outbox.py  test_paper_broker_persistence.py  test_paper_trading_loop.py  test_policy.py  test_portfolio_engine.py  test_risk_engine.py  test_s1_momentum.py  test_s2_meanrev.py  test_seasonal_window.py  test_shadow_recorder.py  test_shutdown_fault_injection.py  test_strategy_dsl.py  test_strategy_iteration.py  test_supervisor_and_worker.py  test_three_day_report.py
Alpha/文档/: 00_我在哪.md  01_产品需求.md  02_系统架构.md  03_口径字典.md  05_执行与验收.md  06_运维手册.md
LinzeDatabase/MooMooAU/: .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
PFI/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  PRODUCT.md  README.md  StartPFI.command  StopPFI.command  VERSION  pyproject.toml  功能清单  功能清单.md  开发记录  开发记录.md  模型参数文件  模型参数文件.md
PFI/MetaDatabase/: README.md
PFI/assets/: PFIAppIcon.icns  PFIAppIconConfig.json  PFILauncher.applescript
PFI/config/: parameter_changelog.md  pfi_parameters.yaml  pfi_v022_parameters.yaml  pfi_v025_active_requirements.json  release_manifest.json
PFI/data/: README.md
PFI/macos/: PFI_launcher.c  README.md
PFI/scripts/: ciSmoke.sh  (+80 more)
arxiv-daily-push/: .gitignore  AGENTS.md  CHANGELOG.md  PLANS.md  README.md  pyproject.toml  requirements.txt  功能清单  功能清单.md  开发记录  开发记录.md  模型参数文件  模型参数文件.md
xhs-douyin-2notion/: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  PURSUING_GOAL.md  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  功能清单.md  开发记录.md  模型参数文件.md
(+8565 files in other folders)
