[project]
name = "enterprise-ecosystem-intelligence"
version = "0.1.0"
description = "Enterprise Ecosystem Intelligence MVP services and validation tooling."
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.137.2",
  "httpx==0.28.1",
  "openapi-spec-validator==0.9.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pypdf==6.13.3",
  "PyYAML==6.0.3",
  "uvicorn[standard]==0.49.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.0",
  "ruff==0.15.18"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["prototype", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
