[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfi-os"
version = "0.1.0"
description = "Personal Financial Intelligence OS for local-first research, backtesting, evidence, and portfolio decision support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "python-docx>=1.1",
  "pypdf>=4.0",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
app = [
  "plotly>=5.20",
  "streamlit>=1.35",
]
data = [
  "duckdb>=1.0",
  "pyarrow>=15",
  "requests>=2.31",
  "akshare>=1.16",
  "yfinance>=0.2.50",
  "futu-api>=9.0",
]
test = [
  "pytest>=8.0",
  "streamlit>=1.35",
  "plotly>=5.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
