[project]
name = "x2n-workspace"
version = "0.0.0.1"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
ci = [
  "coverage==7.15.2",
  "pyyaml==6.0.3",
  "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/companion", "packages/contracts"]

[tool.ruff]
exclude = [".venv", "build", "node_modules"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
