[project]
name = "ai-research-terminal"
version = "0.1.0"
description = "Report-first automated equity research and trading advice system"
requires-python = ">=3.10"
dependencies = ["certifi>=2025.10.5", "reportlab>=4.5.1", "tzdata>=2026.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
